fixed image width on mobile

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ layout: style
 }
 
 #overview .section .phone-image img{
-    height: 80vh;
+    width: 75vw;
 }
 
 
